--- a/front-tributi/package.json
+++ b/front-tributi/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.16.13",
     "axios": "^0.21.1",
     "chokidar": "^3.5.2",
+    "firebase": "^9.1.3",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
