--- a/front-tributi/package.json
+++ b/front-tributi/package.json
@@ -10,7 +10,7 @@
     "axios": "^0.21.1",
     "chokidar": "^3.5.2",
     "firebase": "^9.1.3",
-    "node-sass": "^5.0.0",
+    "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.3.0",
